# IX-Liquid

./: .gitignore  Makefile  NOTICE  README.md  pyproject.toml
assets/: skid_layout_notes.md
bom/: bom_by_category.md  ix_liquid_bom.csv  ix_liquid_bom.md
configs/: alarm_matrix.yaml  io_map.yaml  permissives.yaml  state_machine.yaml
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  ASSEMBLY.md  BUILD_SCHEDULE.md  COMMISSIONING_CHECKLIST.md  CONTROLS.md  COST_MODEL.md  OPERATIONS_AND_MAINTENANCE.md  PROOF_OF_CONCEPT.md  RISK_REGISTER.md  SAFETY_AND_NON_CLAIMS.md  SOURCES.md
examples/: sample_event_log.ndjson  sample_run.json
schemas/: event.schema.json  node_status.schema.json
src/ix_liquid/: __init__.py  alarm_logic.py  control_logic.py  mass_balance.py  report_template.py
tests/: test_control_logic.py  test_mass_balance.py
tools/: cost_rollup.py
